<resources>
    <string name="app_name">μStep</string>
    <string name="preferences_general_section">General</string>
    <string name="preferences_preferred_lang_pref">Preferred language</string>
    <string name="preferences_preferred_lang_pref_summary">Preferred language for downloaded data</string>
    <string name="preferences_dynamic_colors_pref">Dynamic colors support</string>
    <string name="preferences_dynamic_colors_pref_summary">The color of the accent will change with the desktop background</string>
    <string name="preferences_auto_download_pref">Automatic data cache</string>
    <string name="preferences_auto_downloads_pref_summary">If enabled, the data will be automatically saved to the application cache</string>
    <string name="preferences_remove_cached_pref">Remove cached</string>
    <string name="preferences_remove_cached_pref_summary">Delete all previously cached data</string>

    <string name="fmm_start_btn_label">Start</string>
    <string name="fmm_settings_btn_label">Settings</string>
    <string name="fmm_powered_by_label" translatable="false">by KonstantIMP</string>

    <string name="ucv_start_btn">Let\'s go!</string>
    <string name="ucv_official_chip">Official</string>
    <string name="ucv_state_download">Download</string>
    <string name="ucv_state_downloaded">Downloaded</string>

    <string name="ta_back_msg">Back</string>
    <string name="ta_choose_point">Choose point to start</string>

    <string-array name="preferences_supported_languages">
        <item>Русский</item>
        <item>English</item>
        <item>中国 - Chinese</item>
    </string-array>

    <string-array name="preferences_supported_languages_values">
        <item>ru</item>
        <item>en</item>
        <item>zh</item>
    </string-array>

    <string name="service_downloading">Downloading…</string>
    <string name="service_ready">Ready to cache</string>

    <string name="error_preview">Something went wrong:</string>
    <string name="cache_warn">Do not close the app</string>
    <string name="ad_welcome_msg">Welcome!</string>
    <string name="ad_has_account">Already have an account? Log in</string>
    <string name="ad_do_not_have_account">Don\'t have an account? Create it</string>
    <string name="ad_lets_go">Let\'s go!</string>
    <string name="ad_name_surname_hint">Enter your name and surname</string>
    <string name="ad_email_hint">Enter your email</string>
    <string name="ad_password_hint">Enter the password</string>
    <string name="pa_auth_btn">Log in or create an account</string>
    <string name="pa_auth_success">Auth is successful</string>
    <string name="pa_entry_edit">Shouldn\'t be empty</string>

    <string name="pref_restart_need">Changes will be applied after app\'s restart</string>
    <string name="pref_done">All done!</string>
    <string name="ucv_events_btn">Events</string>
    <string name="nv_text">There\'s nothing here now. Check back later</string>
    <string name="ecv_guide_name_msg">Guide\'s name</string>
    <string name="ecv_register">Register</string>
    <string name="ecv_unregister">Unregister</string>
    <string name="ecv_closed">Full</string>
    <string name="ecv_unregister_ok">Your registration has been canceled</string>
    <string name="ecv_register_ok">Your were registered</string>
    <string name="ucv_login_require">Log in to access the events</string>
    <string name="ucv_auth">AUTH</string>

    <string name="events_service_name">Events notifier</string>
    <string name="events_service_body">Today at %1$s there will be an \"%2$s\" event. Come to the %3$s by the appointed time.</string>
    <string name="ad_title_msg">What\'s new?</string>
</resources>
