<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_shape"
    tools:context=".ui.dialog.AuthDialog">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ad_close_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.Button.IconButton"
        app:icon="@drawable/ic_close"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/ad_title_lottie"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_rawRes="@raw/hisaur"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/ad_title_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ad_welcome_msg"
        android:textColor="?attr/colorSecondary"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ad_title_lottie" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/ad_auth_type_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:textSize="12sp"
        android:text="@string/ad_has_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ad_auth_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/ad_lets_go"
        style="@style/Widget.Material3.Button.OutlinedButton"
        app:layout_constraintBottom_toTopOf="@+id/ad_auth_type_msg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ad_name_il"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ad_title_msg"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"

        app:boxCornerRadiusTopStart="30dp"
        android:hint="@string/ad_name_surname_hint"
        style="@style/Widget.Material3.TextInputLayout.FilledBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ad_name_it"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/ad_mover_tv"
        app:layout_constraintBottom_toBottomOf="@id/ad_name_il"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ad_email_il"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ad_mover_tv"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusTopStart="30dp"
        android:hint="@string/ad_email_hint"
        style="@style/Widget.Material3.TextInputLayout.FilledBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ad_email_it"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ad_pass_il"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ad_email_il"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"

        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusTopStart="30dp"
        android:hint="@string/ad_password_hint"
        style="@style/Widget.Material3.TextInputLayout.FilledBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ad_pass_it"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>